--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,8 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-unknown-linux-musl
-
+      - name: Install OpenSSL for musl
+        run: sudo apt-get update && sudo apt-get install -y musl-tools musl-dev libssl-dev
       - name: Build ETL Binary
         run: |
           cd scry
