--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,9 +41,17 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: x86_64-unknown-linux-musl
-      - name: Install OpenSSL for musl
-        run: sudo apt-get update && sudo apt-get install -y musl-tools musl-dev libssl-dev
+
+      - name: Install dependencies for musl cross-compilation
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y musl-tools musl-dev pkg-config libssl-dev
+
       - name: Build ETL Binary
+        env:
+          PKG_CONFIG_ALLOW_CROSS: 1
+          OPENSSL_STATIC: 1
+          OPENSSL_DIR: /usr
         run: |
           cd scry
           cargo build --release --target x86_64-unknown-linux-musl
