--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,26 +37,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: x86_64-unknown-linux-musl
-
-      - name: Install dependencies for musl cross-compilation
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y musl-tools musl-dev pkg-config libssl-dev
-
-      - name: Build ETL Binary
-        env:
-          PKG_CONFIG_ALLOW_CROSS: 1
-          OPENSSL_STATIC: 1
-          OPENSSL_DIR: /usr
-        run: |
-          cd scry
-          cargo build --release --target x86_64-unknown-linux-musl
-          strip target/x86_64-unknown-linux-musl/release/scry
-
       - name: Login to Container Registry
         uses: docker/login-action@v3
         with:
@@ -82,13 +62,13 @@ jobs:
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/web:latest,${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/web:${{ github.sha }}
 
-      # Remove the ETL Docker build step since we're using binary
-
-      - name: Upload ETL Binary
-        uses: actions/upload-artifact@v4
+      - name: Build and Push ETL App
+        uses: docker/build-push-action@v5
         with:
-          name: scry-binary
-          path: scry/target/x86_64-unknown-linux-musl/release/scry
+          context: ./scry
+          target: production
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/etl:latest,${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/etl:${{ github.sha }}
 
   deploy:
     needs: build
@@ -100,18 +80,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Download ETL Binary
-        uses: actions/download-artifact@v4
-        with:
-          name: scry-binary
-          path: ./
-
       - name: Deploy to Production LightSail Instance
         env:
           SSH_PRIVATE_KEY: ${{ secrets.LIGHTSAIL_SSH_PK }}
           LIGHTSAIL_IP: ${{ secrets.LIGHTSAIL_IP }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          LIGHTSAIL_GITHUB_TOKEN: ${{ secrets.LIGHTSAIL_GITHUB_TOKEN }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
           NODE_ENV: ${{ secrets.NODE_ENV }}
@@ -134,21 +107,16 @@ jobs:
           POSTGRES_USER=$POSTGRES_USER
           POSTGRES_PASSWORD=$POSTGRES_PASSWORD
           SCRY_LOG=$SCRY_LOG
-          LIGHTSAIL_GITHUB_TOKEN=$LIGHTSAIL_GITHUB_TOKEN
           EOF
-
-          # Make binary executable
-          chmod +x scry
 
           # Copy files to server
           scp -o StrictHostKeyChecking=no -i private_key docker-compose.prod.yml ubuntu@$LIGHTSAIL_IP:~/
           scp -o StrictHostKeyChecking=no -i private_key .env ubuntu@$LIGHTSAIL_IP:~/
-          scp -o StrictHostKeyChecking=no -i private_key scry ubuntu@$LIGHTSAIL_IP:~/
           scp -o StrictHostKeyChecking=no -i private_key -r docker/ ubuntu@$LIGHTSAIL_IP:~/
 
           # Deploy on server
           ssh -o StrictHostKeyChecking=no -i private_key ubuntu@$LIGHTSAIL_IP <<'EOF'
-            # Login to GHCR
+            # Login to GHCR - use environment variable passed to SSH
             echo "$GITHUB_TOKEN" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
             # Rename prod compose file to standard name
@@ -163,7 +131,7 @@ jobs:
             # Start PostgreSQL first to ensure it's ready
             docker compose up -d postgres
             
-            # Wait for PostgreSQL to be healthy
+            # Wait for PostgreSQL to be healthy - this will now work on remote machine
             timeout 60 bash -c 'until docker compose exec postgres pg_isready -U $POSTGRES_USER; do sleep 2; done'
 
             # Error handling for DB startup
@@ -175,11 +143,8 @@ jobs:
               exit 1
             fi
 
-            echo "Starting web service..."
-            docker compose up -d web
-
-            # Make ETL binary executable
-            chmod +x ~/scry
+            echo "Starting services..."
+            docker compose up -d
 
             # Deployment verification
             sleep 10
@@ -195,12 +160,6 @@ jobs:
             }
 
             echo "Deployment successful!"
-            echo "ETL binary available at: ~/scry"
-            
-            # Test ETL binary
-            echo "Testing ETL binary..."
-            ./scry --version || echo "ETL binary test failed"
-
             docker image prune -f
           EOF
 
