--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,6 +102,11 @@ jobs:
           # Create .env file
           cat > .env <<EOF
           APP_NAME=i-want-my-mtg
+          DB_HOST=postgres
+          DB_PORT=5432
+          DB_USERNAME=$POSTGRES_USER
+          DB_PASSWORD=$POSTGRES_PASSWORD
+          DB_NAME=$POSTGRES_DB
           DATABASE_URL=$DATABASE_URL
           JWT_SECRET=$JWT_SECRET
           NODE_ENV=$NODE_ENV
