--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -123,7 +123,7 @@ jobs:
           scp -o StrictHostKeyChecking=no -i private_key -r docker/ ubuntu@$LIGHTSAIL_IP:~/
 
           # Deploy on server
-          ssh -o StrictHostKeyChecking=no -i private_key ubuntu@$LIGHTSAIL_IP <<'EOF'
+          ssh -o StrictHostKeyChecking=no -i private_key ubuntu@$LIGHTSAIL_IP <<EOF
             # Login to GHCR using environment variables passed to SSH
             echo "$GITHUB_TOKEN" | docker login ghcr.io -u "$GITHUB_ACTOR" --password-stdin
 
@@ -146,7 +146,7 @@ jobs:
             timeout 60 bash -c 'until docker compose exec postgres pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"; do echo "Waiting for DB..."; sleep 2; done'
 
             # Error handling for DB startup
-            if [ $? -eq 0 ]; then
+            if [ \$? -eq 0 ]; then
               echo "PostgreSQL is ready!"
             else
               echo "PostgreSQL failed to start!"
@@ -164,7 +164,7 @@ jobs:
             docker compose logs web --tail=10
 
             echo "Testing web service connectivity..."
-            timeout 30 bash -c 'until curl -f http://localhost:3000/health || curl -f http://localhost:80; do echo "Waiting for web service..."; sleep 2; done' || {
+            timeout 30 bash -c 'until curl -f http://localhost; do echo "Waiting for web service..."; sleep 2; done' || {
               echo "Web service failed to respond!"
               docker compose logs web
               exit 1
